<?xml version="1.0"?>
<package>
  <name>lanoising</name>
  <version>0.0.1</version>
  <description>Noising the point cloud</description>
  <maintainer email="yangtaonpu@hotmail.com">Tao Yang</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
